--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <meta name="author" content="Jacob Ursua">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <base href="./" target="_blank">
-
     <title>Ursua Designs | 3D Printing</title>
 
     <!-- Icons -->
@@ -373,7 +371,7 @@
                                         href="mailto:ursuadesigns@gmail.com?Subject=Custom%203D%20Printing%20Order">ursuadesigns@gmail.com</a>
                                     to inquire about your order. <a href="#learn-more" data-dismiss="modal">Click
                                         here</a> to
-                                    learn about what we can make and how we price prints</p>
+                                    learn about what we can make and how we price prints.</p>
                             </div>
                         </div>
                     </div>
