Fixed paypal buttons display issue

--- a/index.html
+++ b/index.html
@@ -465,10 +465,11 @@
                     <div class="modal-footer border-top-0 d-flex justify-content-between">
                         <div class="container">
                             <div class="row">
-                                <div class="col">
+                                <div class="col-1">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                                 </div>
-                                <div class="col-5" id="paypal-button-container" style="margin-top: 6px"></div>
+                                <div class="col"></div>
+                                <div class="col" id="paypal-button-container" style="margin-top: 6px"></div>
                             </div>
                         </div>
                     </div>
