Added Google Analytics

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 
 <head>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163595701-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-163595701-1');
+    </script>
+
+
     <meta charset="utf-8">
     <meta name="description" content="Ursua Designs offers 3D printing services alongside custom 3D printed products.">
     <meta name="keywords" content="3D Printing,Products,Services,Custom,Personal,Personalized">
@@ -20,9 +30,21 @@
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="css/index.min.css" rel="stylesheet">
 
+    <!-- Google Tag Manager -->
+    <script>
+        (function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({ 'gtm.start': new Date().getTime(), event: 'gtm.js' }); var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f); })(window, document, 'script', 'dataLayer', 'GTM-PXBSFJS');
+    </script>
+    <!-- End Google Tag Manager -->
+
 </head>
 
 <body id="top">
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+        <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PXBSFJS" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="nav">
@@ -359,7 +381,7 @@
                                         </div>
                                         <div class="col-12 add-to-cart-container">
                                             <div class="col option">
-                                                <button class="add-to-cart-button">Add to Cart</button>
+                                                <button class="add-to-cart-button sqs-block-button-element">Add to Cart</button>
                                             </div>
                                         </div>
                                     </div>
