--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                                             <div class="col option">
                                                 <h4 class="option-set-heading" id="option-customorder-heading">Order
                                                     Price</h4>
-                                                <input type="number" min="1" max="500" value="10" class="option-set"
+                                                <input type="number" min="1" max="500" value="10" onkeyup="enforceMinMax(this)" class="option-set"
                                                     id="option-customorder-price">
                                             </div>
                                         </div>
@@ -440,8 +440,8 @@
                                     <!-- Add Your Shipping Options Here -->
                                     <select id="shipping-options" onchange="updateCartModal(true)">
                                         <option value="5">USPS First Class Package (1-3 Days) - $5</option>
+                                        <option value="0">Local Pickup Only - $0</option>
                                         <!--
-                                        <option value="10">Shipping Two ($10)</option>
                                         <option value="20">Shipping Three ($20)</option>
                                         <option value="50">Shipping Four ($50)</option>-->
                                     </select>
