Shipping option added
If directed to, use the free shipping option

--- a/index.html
+++ b/index.html
@@ -754,6 +754,7 @@
                                     <select id="shipping-options" onchange="updateCartModal(true)">
                                         <option value="5">USPS First Class Package (1-3 Days) - $5</option>
                                         <option value="0">Local Pickup Only - $0</option>
+                                        <option value="0">Free Shipping (Use if Directed To) - $0</option>
                                         <!--
                                         <option value="20">Shipping Three ($20)</option>
                                         <option value="50">Shipping Four ($50)</option>-->
