Updated images, description
New images have been added, products and cart system hidden, descriptions updated

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <li class="navbar-item">
                         <a class="nav-link js-scroll-trigger" href="#services">Services</a>
                     </li>
-                    <li class="navbar-item">
+                    <li class="navbar-item hidden">
                         <a class="nav-link js-scroll-trigger" href="#products-container">Products</a>
                     </li>
                     <li class="navbar-item">
@@ -76,7 +76,7 @@
                     <li class="navbar-item">
                         <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                     </li>
-                    <li class="navbar-item">
+                    <li class="navbar-item hidden">
                         <a class="nav-link" data-toggle="modal" href="#cart">Cart</a>
                     </li>
                 </ul>
@@ -90,14 +90,14 @@
         <div class="container">
             <div class="heading-text">
                 <div class="heading-main">Welcome To Ursua Designs!</div>
-                <div class="heading-secondary">Find Your Message</div>
+                <div class="heading-secondary">Custom 3D Printing That Fits Your Needs</div>
                 <a class="btn btn-primary btn-xl js-scroll-trigger" href="#learn-more">Tell Me More</a>
             </div>
         </div>
     </header>
 
     <!-- Section -->
-    <section class="page-section page-section-alt" id="services">
+    <section class="page-section" id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -133,7 +133,7 @@
     </section>
 
     <!-- Products -->
-    <div class="page-section" id="products-container">
+    <div class="page-section hidden" id="products-container">
         <div class="col-lg-12 text-center">
             <h2 class="section-heading">Products</h2>
         </div>
@@ -329,25 +329,21 @@
         <div class="container">
             <div class="row text-center d-flex align-items-center">
                 <div class="container col-xl-6 col-lg-6 col-md-10 col-sm-8 col-6 order-1">
-                    <img src="img/about/Gradient Banner.png" data-src="https://drive.google.com/uc?export=view&id=1HyIOfJxK6hytbsa9ztcXOtG47qgmocAh" data-srcset="https://drive.google.com/uc?export=view&id=1HyIOfJxK6hytbsa9ztcXOtG47qgmocAh"
-                        class="lazy img-fluid">
+                    <img src="img/about/Gradient Banner.png" data-src="/img/about/T-Rex Skull Cura Center.png" data-srcset="/img/about/T-Rex Skull Cura Center.png"
+                    class="lazy img-fluid">
                 </div>
-
+                
                 <div class="container text-left col-xl-6 col-lg-6 col-md-10 col-sm-10 col-10 order-2">
-                    <br>
                     <h2 class="section-heading text-center">Why Ursua Designs?</h2>
+                    <br>
 
-                    <p class="">Ursua Designs employs the evolving technology of 3D printing to create unique items that
-                        hold a special value for
-                        anyone.
+                    <p class="">Ursua Designs employs the evolving technology of 3D printing to create unique items that hold a special value for anyone.
+                    </p>
+                    
+                    <p class="">We go out of our way to ensure we deliver the best possible result. 3D printing is an art that takes time and effort to produce a result worthy of being called final. For any given blemish or failure, we assess the situation and determine the best way to fix it. Should the need arise, Ursua Designs will reprint an object that doesn't meet our quality standards.
                     </p>
 
-                    <p class="">As it's expressed, a personality reveals the inner being of everyone. It shows us who we
-                        are
-                        and why we act as we do. As
-                        such, putting a personal touch on the things around us is an extension of our personalities and
-                        who
-                        we are.
+                    <p class="">Everyone has their own unique personality. That's why it's important to express oneself as it is the most powerful way to show others who they are and why they do the things they do. As such, adding a personal bit of flair and personalization provides a special value that stands out.
                     </p>
                 </div>
 
@@ -360,17 +356,17 @@
         <div class="container">
             <div class="row text-center d-flex align-items-center">
                 <div class="container col-xl-6 col-lg-6 col-md-10 col-sm-8 col-6 order-2">
-                    <img src="img/about/Gradient Banner.png" data-src="/img/about/Ender 3 Printing.jpg" data-srcset="/img/about/Ender 3 Printing.jpg" class="lazy img-fluid">
+                    <img src="img/about/Gradient Banner.png" data-src="/img/about/Ender 3 Printers.jpg" data-srcset="/img/about/Ender 3 Printers.jpg" class="lazy img-fluid">
                 </div>
 
                 <div class="container col-xl-6 col-lg-6 col-md-10 col-sm-10 col-10 order-1" style="text-align: left;">
                     <br>
                     <h2 class="section-heading text-center ud-red">Ursua Designs Capabilities</h2>
 
-                    <p class="">Ursua Designs owns three 3D printers, two of which are heavily modifed Creality Ender 3s, alongside a
+                    <p class="">Ursua Designs has three 3D printers, two of which are heavily modifed Creality Ender 3s, alongside a
                         slightly modified TronXY X1. All three printers produce excellent prints and are used to accelerate
                         printing and achieve different results. The largest print we support is the size of 15 inches x
-                        14 inches x 9.5 inches.</p>
+                        14 inches x 9 inches.</p>
 
                     <p class="">Our prices are determine by a number of factors, including the size of the print, the
                         material used, the level of detail required, as well as how much material is used.</p>
