Optimized Banner Image Sizes
Swapped some images to JPG & lower resolutions

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <header class="masthead">
         <div class="top-banner">
             <div class="text-center d-flex align-items-center">
-                <img src="img/banners/Banner@2x.png" class="img-fluid banner-img">
+                <img src="img/banners/Banner.jpg" class="img-fluid banner-img">
             </div>
             <div class="down-arrow-wrapper" data-module="down-arrow">
                 <a href="#products" data-ui="down-arrow" class="down-arrow ss-icon ss-navigatedown js-scroll-trigger"
@@ -255,7 +255,7 @@
         <div class="container">
             <div class="row text-center d-flex align-items-center">
                 <div class="container col-xl-6 col-lg-6 col-md-10 col-sm-8 col-10 order-1">
-                    <img src="img/banners/Gradient_Banner.png" data-src="/img/about/T-Rex_Skull_Cura_Center.png"
+                    <img src="img/banners/Gradient_Banner.jpg" data-src="/img/about/T-Rex_Skull_Cura_Center.png"
                         data-srcset="/img/about/T-Rex_Skull_Cura_Center.png" class="lazy img-fluid pad-below">
                 </div>
 
@@ -289,7 +289,7 @@
         <div class="container">
             <div class="row text-center d-flex align-items-center">
                 <div class="container col-xl-6 col-lg-6 col-md-10 col-sm-8 col-10 order-2 pad-above">
-                    <img src="img/banners/Gradient_Banner.png" data-src="/img/about/Ender_3_Printers.jpg"
+                    <img src="img/banners/Gradient_Banner.jpg" data-src="/img/about/Ender_3_Printers.jpg"
                         data-srcset="/img/about/Ender_3_Printers.jpg" class="lazy img-fluid">
                 </div>
 
