Removed Unneeded Images
Removed unneeded images, swapped header banner to 1920 width version

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <header class="masthead">
         <div class="top-banner">
             <div class="text-center d-flex align-items-center">
-                <img src="img/banners/Banner.jpg" class="img-fluid banner-img">
+                <img src="img/banners/Banner1.jpg" class="img-fluid banner-img">
             </div>
             <div class="down-arrow-wrapper" data-module="down-arrow">
                 <a href="#products" data-ui="down-arrow" class="down-arrow ss-icon ss-navigatedown js-scroll-trigger"
