Fixed Shop Scroll
Scrolling to shop didn't work when pressing the arrow below the header image

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <a class="nav-link js-scroll-trigger" href="#services">Services</a>
                     </li>
                     <li class="navbar-item">
-                        <a class="nav-link js-scroll-trigger" href="#products-container">Shop</a>
+                        <a class="nav-link js-scroll-trigger" href="#shop">Shop</a>
                     </li>
                     <li class="navbar-item">
                         <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -92,7 +92,7 @@
                 <img src="img/banners/Banner1.jpg" class="img-fluid banner-img">
             </div>
             <div class="down-arrow-wrapper" data-module="down-arrow">
-                <a href="#products" data-ui="down-arrow" class="down-arrow ss-icon ss-navigatedown js-scroll-trigger"
+                <a href="#shop" data-ui="down-arrow" class="down-arrow ss-icon ss-navigatedown js-scroll-trigger"
                     aria-label=""></a>
             </div>
         </div>
@@ -134,8 +134,8 @@
         </div>
     </section>
 
-    <!-- Products -->
-    <div class="page-section" id="products-container">
+    <!-- Shop -->
+    <div class="page-section" id="shop">
         <div class="col-lg-12 text-center">
             <h1 class="section-heading">Shop</h1>
         </div>
