--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Stylesheets -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/index.min.css" rel="stylesheet">
 
     <!-- Google Tag Manager -->
     <script>
