--- a/index.html
+++ b/index.html
@@ -142,10 +142,34 @@
 
         <div class="row" id='product-listings'>
 
+            <!-- Wall Mounted Valve Index Headset and Controller Charging Stand -->
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="product product-rounded">
+                    <a class="product-link"
+                        href="https://www.etsy.com/listing/936668122/valve-index-headset-and-controller">
+                        <div class="product-img-container">
+                            <div class="product-img">
+                                <div class="product-hover">
+                                </div>
+                                <!-- Card Image -->
+                                <img class="item-image"
+                                    src="https://i.etsystatic.com/21771279/r/il/c285b3/2903420090/il_794xN.2903420090_n5aq.jpg">
+                                <!--<img class="item-image" src="img/logos/Logo.png">-->
+                            </div>
+                        </div>
+                        <div class="product-caption">
+                            <!-- Card Title -->
+                            <h4 class="product-caption-title">Wall Mounted Valve Index Headset and Controller Charging Stand</h4>
+                            <!-- Card Subheading -->
+                            <p class="product-caption-description">Never Forget to Charge Again</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
             <!-- Wall Mounted VR Headset Stand Product Listing -->
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
-                    <!-- Set the href to the respective product modal id -->
                     <a class="product-link"
                         href="https://www.etsy.com/listing/807314605/vr-headset-stand-and-controller-wall">
                         <div class="product-img-container">
@@ -171,7 +195,6 @@
             <!-- Summerboard Bumpers V2 Product Listing -->
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
-                    <!-- Set the href to the respective product modal id -->
                     <a class="product-link"
                         href="https://www.etsy.com/listing/866735294/summerboard-deck-bumpers-v2-protection">
                         <div class="product-img-container">
@@ -197,7 +220,6 @@
             <!-- Switch Joy Con Grip Product Listing -->
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
-                    <!-- Set the href to the respective product modal id -->
                     <a class="product-link"
                         href="https://www.etsy.com/listing/787377436/nintendo-switch-joy-con-grip-3d-printed">
                         <div class="product-img-container">
@@ -206,7 +228,7 @@
                                 </div>
                                 <!-- Card Image -->
                                 <img class="item-image"
-                                    src="https://i.etsystatic.com/21771279/r/il/e8582e/2354310565/il_794xN.2354310565_odg1.jpg">
+                                    src="https://i.etsystatic.com/21771279/r/il/483a48/2875808390/il_794xN.2875808390_ssfo.jpg">
                                 <!--<img class="item-image" src="img/logos/Logo.png">-->
                             </div>
                         </div>
@@ -215,32 +237,6 @@
                             <h4 class="product-caption-title">Custom Switch Joy Con Grip</h4>
                             <!-- Card Subheading -->
                             <p class="product-caption-description">Your Joy Cons - Your Style</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <!-- Summerboard Bumpers Product Listing -->
-            <div class="col-lg-3 col-md-4 col-sm-6">
-                <div class="product product-rounded">
-                    <!-- Set the href to the respective product modal id -->
-                    <a class="product-link"
-                        href="https://www.etsy.com/listing/852420540/summerboard-deck-guards-protection">
-                        <div class="product-img-container">
-                            <div class="product-img">
-                                <div class="product-hover">
-                                </div>
-                                <!-- Card Image -->
-                                <img class="item-image"
-                                    src="https://i.etsystatic.com/21771279/r/il/574710/2580002153/il_794xN.2580002153_o8r0.jpg">
-                                <!--<img class="item-image" src="img/logos/Logo.png">-->
-                            </div>
-                        </div>
-                        <div class="product-caption">
-                            <!-- Card Title -->
-                            <h4 class="product-caption-title">Summerboard Bumpers</h4>
-                            <!-- Card Subheading -->
-                            <p class="product-caption-description">Protection That Provides Peace of Mind</p>
                         </div>
                     </a>
                 </div>
@@ -297,9 +293,9 @@
                     <br>
                     <h2 class="section-heading text-center ud-red">Ursua Designs Capabilities</h2>
 
-                    <p class="">Ursua Designs has four 3D printers, three of which are modifed Creality Ender 3s, with the other being a Craelity Ender 5.
-                        All four printers produce excellent prints and are used to accelerate printing times.
-                        The largest print volume we support is 15 inches x 14 inches x 8.5 inches.</p>
+                    <p class="">Ursua Designs has five 3D printers, three of which are modified Creality Ender 3s, a modified Creality Ender 5, and a Sovol SV02.
+                        All five printers produce excellent prints and are used to accelerate printing times.
+                        The largest print volume we support is 11 inches x 9 inches x 11.5 inches.</p>
 
                     <p class="">Our prices are determined by a number of factors, including the size of the print, the
                         type of material used, printing time, the level of detail required, as well as how much material
@@ -308,7 +304,7 @@
                     <h5 class="ud-red">Our Materials and Colors</h5>
                     <ul>
                         <li>PLA (Our Standard Plastic):&nbsp;Black, White, Red, Green, Blue, Yellow</li>
-                        <li>TPU (Stretchy and Flexible):&nbsp;Black, White, Green</li>
+                        <li>TPU (Stretchy and Flexible):&nbsp;Black, White</li>
                         <li>PETG (More Durable and Resistant):&nbsp;Black, White</li>
                     </ul>
                 </div>
