--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta charset="utf-8">
     <meta name="description" content="Ursua Designs offers 3D printing services alongside custom 3D printed products.">
-    <meta name="keywords" content="3D Printing,Products,Services,Custom,Personal,Personalized">
+    <meta name="keywords" content="3D Printing,Virtual Reality Stand,VR Wall Mount,Oculus Quest Display,Valve Index Wall Charging Stand,Summerboard Bumpers">
     <meta name="author" content="Jacob Ursua">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
