Updated Listings, Small Font Fix
Removed Switch Grips and replaced it with the AIO Index Stand, Updated product images, Fixed some font sizing on smaller screens

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                                 </div>
                                 <!-- Card Image -->
                                 <img class="item-image"
-                                    src="https://i.etsystatic.com/21771279/r/il/c285b3/2903420090/il_794xN.2903420090_n5aq.jpg">
+                                    src="https://i.etsystatic.com/21771279/r/il/d66d72/2955875215/il_794xN.2955875215_3738.jpg">
                                 <!--<img class="item-image" src="img/logos/Logo.png">-->
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                                 </div>
                                 <!-- Card Image -->
                                 <img class="item-image"
-                                    src="https://i.etsystatic.com/21771279/r/il/4c7235/2400351827/il_794xN.2400351827_m68u.jpg">
+                                    src="https://i.etsystatic.com/21771279/r/il/1bd6cd/2931914692/il_794xN.2931914692_6498.jpg">
                                 <!--<img class="item-image" src="img/logos/Logo.png">-->
                             </div>
                         </div>
@@ -217,26 +217,26 @@
                 </div>
             </div>
 
-            <!-- Switch Joy Con Grip Product Listing -->
+            <!-- AIO Valve Index Headset and Controller Charging Stand -->
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
                     <a class="product-link"
-                        href="https://www.etsy.com/listing/787377436/nintendo-switch-joy-con-grip-3d-printed">
+                        href="https://www.etsy.com/listing/960139496/valve-index-all-in-one-headset-and">
                         <div class="product-img-container">
                             <div class="product-img">
                                 <div class="product-hover">
                                 </div>
                                 <!-- Card Image -->
                                 <img class="item-image"
-                                    src="https://i.etsystatic.com/21771279/r/il/483a48/2875808390/il_794xN.2875808390_ssfo.jpg">
+                                    src="https://i.etsystatic.com/21771279/r/il/9b2370/2920094678/il_794xN.2920094678_o1px.jpg">
                                 <!--<img class="item-image" src="img/logos/Logo.png">-->
                             </div>
                         </div>
                         <div class="product-caption">
                             <!-- Card Title -->
-                            <h4 class="product-caption-title">Custom Switch Joy Con Grip</h4>
+                            <h4 class="product-caption-title">All-in-One Valve Index Headset and Controller Charging Stand</h4>
                             <!-- Card Subheading -->
-                            <p class="product-caption-description">Your Joy Cons - Your Style</p>
+                            <p class="product-caption-description">Easy to Put Away Your Index</p>
                         </div>
                     </a>
                 </div>
@@ -338,9 +338,7 @@
             <div class="row align-items-center">
                 <div class="col-md-4">
                     <span class="copyright text-light">Copyright &copy;
-                        <script>
-                            document.write(new Date().getFullYear());
-                        </script> Ursua Designs
+                        2021 Ursua Designs
                     </span>
                 </div>
                 <div class="col-md-4">
