--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#top">
                 <!-- Your Logo Here -->
-                <img class="img-fluid" src="img/logos/Nav_Logo_Alternate.png">
+                <img class="img-fluid" src="img/logos/Nav_Logo.png">
             </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#responsiveNavbar" aria-controls="responsiveNavbar">Menu <i class="fas fa-bars"></i>
