--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="row" id='product-listings'>
 
             <!-- Wall Mounted Valve Index Headset and Controller Charging Stand -->
-            <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product product-rounded">
                     <a class="product-link"
                         href="https://www.etsy.com/listing/936668122/valve-index-headset-and-controller">
@@ -168,7 +168,7 @@
             </div>
 
             <!-- Wall Mounted VR Headset Stand Product Listing -->
-            <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product product-rounded">
                     <a class="product-link"
                         href="https://www.etsy.com/listing/807314605/vr-headset-stand-and-controller-wall">
@@ -193,7 +193,7 @@
             </div>
 
             <!-- Summerboard Bumpers V2 Product Listing -->
-            <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="col-lg-4 col-md-4 col-sm-6">
                 <div class="product product-rounded">
                     <a class="product-link"
                         href="https://www.etsy.com/listing/866735294/summerboard-deck-bumpers-v2-protection">
@@ -218,7 +218,7 @@
             </div>
 
             <!-- AIO Valve Index Headset and Controller Charging Stand -->
-            <div class="col-lg-3 col-md-4 col-sm-6">
+            <div class="col-lg-3 col-md-4 col-sm-6 hidden">
                 <div class="product product-rounded">
                     <a class="product-link"
                         href="https://www.etsy.com/listing/960139496/valve-index-all-in-one-headset-and">
@@ -293,9 +293,9 @@
                     <br>
                     <h2 class="section-heading text-center ud-red">Ursua Designs Capabilities</h2>
 
-                    <p class="">Ursua Designs has five 3D printers, three of which are modified Creality Ender 3s, a modified Creality Ender 5, and a Sovol SV02.
-                        All five printers produce excellent prints and are used to accelerate printing times.
-                        The largest print volume we support is 11 inches x 9 inches x 11.5 inches.</p>
+                    <p class="">Ursua Designs has six 3D printers, three of which are modified Creality Ender 3s, a modified Creality Ender 5, a modified Creality CR-10 S4, and a Sovol SV02.
+                        All six printers produce excellent prints and are used to accelerate printing times.
+                        The largest print volume we support is 16 inches x 16 inches x 16 inches.</p>
 
                     <p class="">Our prices are determined by a number of factors, including the size of the print, the
                         type of material used, printing time, the level of detail required, as well as how much material
@@ -303,7 +303,7 @@
 
                     <h5 class="ud-red">Our Materials and Colors</h5>
                     <ul>
-                        <li>PLA (Our Standard Plastic):&nbsp;Black, White, Red, Green, Blue, Yellow</li>
+                        <li>PLA (Our Standard Plastic):&nbsp;Black, White, Red, Green, Blue, Yellow, Orange</li>
                         <li>TPU (Stretchy and Flexible):&nbsp;Black, White</li>
                         <li>PETG (More Durable and Resistant):&nbsp;Black, White</li>
                     </ul>
