Updated Product Listings
Added skateboard wall mount, updated capabilities text

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="row" id='product-listings'>
 
             <!-- Wall Mounted Valve Index Headset and Controller Charging Stand -->
-            <div class="col-lg-4 col-md-4 col-sm-6">
+            <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
                     <a class="product-link"
                         href="https://www.etsy.com/listing/936668122/valve-index-headset-and-controller">
@@ -167,8 +167,33 @@
                 </div>
             </div>
 
+            <!-- Wall Mounted Skateboard Graphic Display Stand -->
+            <div class="col-lg-3 col-md-4 col-sm-6">
+                <div class="product product-rounded">
+                    <a class="product-link"
+                        href="https://www.etsy.com/listing/1026041237/wall-mounted-skateboard-graphic-display">
+                        <div class="product-img-container">
+                            <div class="product-img">
+                                <div class="product-hover">
+                                </div>
+                                <!-- Card Image -->
+                                <img class="item-image"
+                                    src="https://i.etsystatic.com/21771279/r/il/b58833/3133212400/il_794xN.3133212400_jq9p.jpg">
+                                <!--<img class="item-image" src="img/logos/Logo.png">-->
+                            </div>
+                        </div>
+                        <div class="product-caption">
+                            <!-- Card Title -->
+                            <h4 class="product-caption-title">Wall Mounted Skateboard Graphic Display Stand</h4>
+                            <!-- Card Subheading -->
+                            <p class="product-caption-description">Skate it. Display it.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+
             <!-- Wall Mounted VR Headset Stand Product Listing -->
-            <div class="col-lg-4 col-md-4 col-sm-6">
+            <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
                     <a class="product-link"
                         href="https://www.etsy.com/listing/807314605/vr-headset-stand-and-controller-wall">
@@ -193,7 +218,7 @@
             </div>
 
             <!-- Summerboard Bumpers V2 Product Listing -->
-            <div class="col-lg-4 col-md-4 col-sm-6">
+            <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="product product-rounded">
                     <a class="product-link"
                         href="https://www.etsy.com/listing/866735294/summerboard-deck-bumpers-v2-protection">
@@ -212,31 +237,6 @@
                             <h4 class="product-caption-title">Summerboard Bumpers V2</h4>
                             <!-- Card Subheading -->
                             <p class="product-caption-description">Revamped Summerboard Deck Protection</p>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <!-- AIO Valve Index Headset and Controller Charging Stand -->
-            <div class="col-lg-3 col-md-4 col-sm-6 hidden">
-                <div class="product product-rounded">
-                    <a class="product-link"
-                        href="https://www.etsy.com/listing/960139496/valve-index-all-in-one-headset-and">
-                        <div class="product-img-container">
-                            <div class="product-img">
-                                <div class="product-hover">
-                                </div>
-                                <!-- Card Image -->
-                                <img class="item-image"
-                                    src="https://i.etsystatic.com/21771279/r/il/9b2370/2920094678/il_794xN.2920094678_o1px.jpg">
-                                <!--<img class="item-image" src="img/logos/Logo.png">-->
-                            </div>
-                        </div>
-                        <div class="product-caption">
-                            <!-- Card Title -->
-                            <h4 class="product-caption-title">All-in-One Valve Index Headset and Controller Charging Stand</h4>
-                            <!-- Card Subheading -->
-                            <p class="product-caption-description">Easy to Put Away Your Index</p>
                         </div>
                     </a>
                 </div>
@@ -293,9 +293,8 @@
                     <br>
                     <h2 class="section-heading text-center ud-red">Ursua Designs Capabilities</h2>
 
-                    <p class="">Ursua Designs has six 3D printers, three of which are modified Creality Ender 3s, a modified Creality Ender 5, a modified Creality CR-10 S4, and a Sovol SV02.
-                        All six printers produce excellent prints and are used to accelerate printing times.
-                        The largest print volume we support is 16 inches x 16 inches x 16 inches.</p>
+                    <p class="">Ursua Designs has six 3D printers that have been modified and tuned to
+                        produce excellent prints. The largest print volume we support is 15 inches x 15 inches x 12 inches.</p>
 
                     <p class="">Our prices are determined by a number of factors, including the size of the print, the
                         type of material used, printing time, the level of detail required, as well as how much material
